crates/eure-macros/tests/compile_fail/flatten_and_ext_conflict.rs
use eure::FromEure;

#[derive(FromEure)]
struct Test {
    #[eure(flatten, ext)]
    field: String,
}

fn main() {}
